tests/NormalTests/paczka1/small_fuzzy/83214792.err
Error in line 7: S193 S193 19,79
Error in line 3: lw8 S193 56,0
Error in line 11: 01Af35 S486 53,6
